<resources>
    <string name="app_name">Screen Recorder for CUT-IN Manager</string>
    <string name="app_simple_name">Screen Recorder</string>

    <!-- general word -->
    <string name="launch">Launch</string>
    <string name="settings">Settings</string>
    <string name="video_list">Video list</string>
    <string name="delete">Delete</string>
    <string name="about_app">About app</string>
    <string name="open_source_license">Open source license</string>

    <!-- setting specific -->
    <string name="video_size">Video size</string>
    <string name="fire_cutin">Fire CUT-IN</string>
    <string name="auto_stop">Auto stop</string>
    <string name="no_seconds_only_manual_stop">+ 0 ms later\n(Manual stop)</string>
    <string name="when_start_record">When start recording</string>
    <string name="trigger_title">Trigger title</string>
    <string name="trigger_title_default">SCREEN RECORD</string>
    <string name="trigger_message">Trigger message</string>
    <string name="trigger_message_default">Start video recording</string>
    <string name="record_button_invisible">Transparency button recording</string>
    <string name="video_list_x">Video list (%1$d)</string>

    <!-- unit -->
    <string name="unit_sec">sec</string>
    <string name="unit_00ms_later">00 ms later</string>
    <string name="x_ms_later">%1$d ms later</string>
    <string name="plus_x_ms_later">+ %1$d ms later</string>

    <!-- messages -->
    <string name="message_reason_record_storage">Storage permission is required to save the record.</string>
    <string name="message_reason_view_videolist">Storage permission is required to show video list.</string>
    <string name="message_confirm_delete">Are you sure you want to delete this item?</string>

</resources>
