<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <!-- start floating -->
            <Button
                android:id="@+id/startFloating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/launch" />

            <!-- video size -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:minHeight="52dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/video_size"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/videoPercentageSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!-- fire cutin -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="52dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/fire_cutin"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fireCutinValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/x_seconds_later"
                    android:textColor="@color/text_clickable"
                    android:textSize="16sp" />

            </LinearLayout>

            <!-- auto stop -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="52dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/auto_stop"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/autoStopValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/x_seconds_later"
                    android:textColor="@color/text_clickable"
                    android:textSize="16sp" />

            </LinearLayout>


            <!-- trigger title -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="52dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/trigger_title"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/triggerTitleValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:maxLength="30"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="8dp"
                        android:singleLine="true"
                        android:text="@string/trigger_title_default"
                        android:textColor="@color/text_clickable"
                        android:textSize="16sp" />

                </FrameLayout>


            </LinearLayout>


            <!-- trigger message -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="52dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:padding="8dp"
                    android:text="@string/trigger_message"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/triggerMessageValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:maxLength="100"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="8dp"
                        android:singleLine="true"
                        android:text="@string/trigger_message_default"
                        android:textColor="@color/text_clickable"
                        android:textSize="16sp" />

                </FrameLayout>


            </LinearLayout>


            <!-- invisible record button  -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="52dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/record_button_invisible"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/invisibleRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp" />

            </LinearLayout>

            <!-- video list  -->

            <LinearLayout
                android:id="@+id/videoList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:minHeight="52dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/videoListTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/video_list_x"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>